--- a/SegueSudokuSNSPush/.classpath
+++ b/SegueSudokuSNSPush/.classpath
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry including="**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="/Users/phanindrapurighalla/Downloads/aws-java-sdk-1.11.176/lib/aws-java-sdk-1.11.176-javadoc.jar"/>
 	<classpathentry kind="lib" path="/Users/phanindrapurighalla/Downloads/aws-java-sdk-1.11.176/lib/aws-java-sdk-1.11.176-sources.jar"/>
 	<classpathentry kind="lib" path="/Users/phanindrapurighalla/Downloads/aws-java-sdk-1.11.176/lib/aws-java-sdk-1.11.176.jar"/>
@@ -25,5 +34,10 @@
 	<classpathentry kind="lib" path="/Users/phanindrapurighalla/Downloads/aws-java-sdk-1.11.176/third-party/lib/spring-context-3.0.7.RELEASE.jar"/>
 	<classpathentry kind="lib" path="/Users/phanindrapurighalla/Downloads/aws-java-sdk-1.11.176/third-party/lib/spring-core-3.0.7.RELEASE.jar"/>
 	<classpathentry kind="lib" path="/Users/phanindrapurighalla/Downloads/aws-java-sdk-1.11.176/third-party/lib/spring-test-3.0.7.RELEASE.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
