--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"/Users/phanindrapurighalla/eclipse-workspace/EclipseProjects/myfsp001","type":"PROJECT","hints":{"PROJECT_NAME":"myfsp001"}},"groupId2:myfsp001:0.0.1"],[{"location":"/Library/Java/JavaVirtualMachines/jdk1.8.0_131.jdk/Contents/Home","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"J2SE-1.5"}},"jre:jre:1.5.0"]]
+[[{"location":"/Users/phanindrapurighalla/eclipse-workspace/EclipseProjects/tokenManagementSystem","type":"PROJECT","hints":{"PROJECT_NAME":"tokenManagementSystem"}},"com.aarnasolutions:tokenManagementSystem:0.0.1"]]
