--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"/Users/phanindrapurighalla/.m2/repository/com/vimalselvam/cucumber-extentsreport/3.0.2/cucumber-extentsreport-3.0.2.jar","type":"JAR","hints":{}},"com.vimalselvam:cucumber-extentsreport:3.0.2"],[{"location":"/Library/Java/JavaVirtualMachines/jdk1.8.0_131.jdk/Contents/Home","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
